// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocComponents Snapshots should generate MOCK_BOLD 1`] = `
Object {
  "align": "left",
  "font": "100 4mm/4.5mm  Arial",
  "height": 4.5,
  "id": undefined,
  "style": Object {},
  "text": "demo bold text",
  "type": "b",
  "uid": "DEMOID",
}
`;

exports[`DocComponents Snapshots should generate MOCK_EMBED 1`] = `
Object {
  "align": "left",
  "embedType": "PDF",
  "height": 100,
  "id": "demo_embed",
  "src": "demofile.pdf",
  "style": Object {},
  "type": "embed",
  "uid": "DEMOID",
  "width": 200,
}
`;

exports[`DocComponents Snapshots should generate MOCK_FULL_PAGE 1`] = `
Object {
  "content": Array [
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "Hello",
      "type": "p",
      "uid": "DEMOID",
    },
  ],
  "height": "auto",
  "id": "example mock page",
  "type": "full_page",
  "uid": "DEMOID",
}
`;

exports[`DocComponents Snapshots should generate MOCK_HEADER 1`] = `
Object {
  "align": "left",
  "font": "5mm/4.56mm Arial",
  "height": 4.56,
  "id": "MISSING_ID",
  "style": Object {},
  "text": "demo header",
  "type": "h3",
  "uid": "DEMOID",
}
`;

exports[`DocComponents Snapshots should generate MOCK_IMAGE_EXAMPLE 1`] = `
Object {
  "altText": "Demo Img",
  "height": 20,
  "id": "MISSING_ID",
  "src": "/images/logo.png",
  "style": Object {},
  "type": "img",
  "uid": "MISSING_ID_DEMOID",
  "width": 50,
}
`;

exports[`DocComponents Snapshots should generate MOCK_PAGE_BREAK 1`] = `
Object {
  "height": "auto",
  "id": "MISSING_ID",
  "type": "pagebreak",
  "uid": "DEMOID",
}
`;

exports[`DocComponents Snapshots should generate MOCK_PARAGRAPH 1`] = `
Object {
  "align": "left",
  "font": "100 4mm/4.5mm  Arial",
  "height": 4.5,
  "id": "MISSING_ID",
  "style": Object {},
  "text": "demo paragraph",
  "type": "p",
  "uid": "DEMOID",
}
`;

exports[`DocComponents Snapshots should generate MOCK_SPAN 1`] = `
Object {
  "align": "left",
  "font": "100 4mm/4.5mm  Arial",
  "height": 4.5,
  "id": "MISSING_ID",
  "style": Object {},
  "text": "demo span",
  "type": "span",
  "uid": "DEMOID",
}
`;

exports[`DocComponents Snapshots should generate MOCK_TABLE_BIG_EXAMPLE 1`] = `
Object {
  "cellPadding": 0,
  "columnWidths": Array [
    20,
    30,
    30,
    60,
  ],
  "content": Array [
    Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Hello",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "World",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "This",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Is some information",
        "type": "p",
        "uid": "DEMOID",
      },
    ],
    Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Another",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "World",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "This",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Is some information",
        "type": "p",
        "uid": "DEMOID",
      },
    ],
    Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Another",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Place",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "This",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Is some information",
        "type": "p",
        "uid": "DEMOID",
      },
    ],
    Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Another",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Place",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "This",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Is some information",
        "type": "p",
        "uid": "DEMOID",
      },
    ],
    Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Another",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Land",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "This",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Is some information",
        "type": "p",
        "uid": "DEMOID",
      },
    ],
  ],
  "font": "100 4mm/4.5mm  Arial",
  "headings": Array [
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "NAME",
      "type": "p",
      "uid": "DEMOID",
    },
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "PLACE",
      "type": "p",
      "uid": "DEMOID",
    },
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "INFO",
      "type": "p",
      "uid": "DEMOID",
    },
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "DESCRIPTION",
      "type": "p",
      "uid": "DEMOID",
    },
  ],
  "headingsHeight": 4.56,
  "headingsMargin": 10,
  "height": 224.56,
  "id": "Demo Table Big",
  "rowHeights": Array [
    20,
    30,
    90,
    60,
    10,
  ],
  "type": "table",
  "uid": -98,
  "width": 140,
}
`;

exports[`DocComponents Snapshots should generate MOCK_TABLE_CALCULATE_EXAMPLE 1`] = `
Object {
  "cellPadding": 3,
  "columnWidths": Array [
    20,
    40,
    40,
    30,
  ],
  "content": Array [
    Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Hello",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "World",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "content": " This is some really long text and more text that should overflow",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
      Object {
        "align": "left",
        "content": "Is some information",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
    ],
    Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Another",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "World",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "This",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "content": "boxed content",
        "font": "100 4mm/4.5mm  Arial",
        "height": 50,
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
    ],
    Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "a",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "content": "b",
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": 24,
      },
      Object {
        "align": "right",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "10",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "altText": "",
        "height": 24,
        "id": "MISSING_ID",
        "src": "http://localhost:3000/d.jpg",
        "style": Object {},
        "type": "img",
        "uid": "MISSING_ID_DEMOID",
        "width": 44,
      },
    ],
  ],
  "font": "100 4mm/4.5mm  Arial",
  "headings": Array [
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "NAME",
      "type": "p",
      "uid": "DEMOID",
    },
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "PLACE",
      "type": "p",
      "uid": "DEMOID",
    },
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "INFO",
      "type": "p",
      "uid": "DEMOID",
    },
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "DESCRIPTION",
      "type": "p",
      "uid": "DEMOID",
    },
  ],
  "headingsHeight": 4.56,
  "headingsMargin": 3,
  "height": 95.06,
  "id": "Calulate Table",
  "rowHeights": Array [
    7.5,
    53,
    27,
  ],
  "type": "table",
  "uid": 97,
  "width": 130,
}
`;

exports[`DocComponents Snapshots should generate MOCK_TABLE_COMPLEX_EXAMPLE 1`] = `
Object {
  "cellPadding": 3,
  "columnWidths": Array [
    20,
    30,
    30,
    60,
  ],
  "content": Array [
    Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Hello",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "World",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "This",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "altText": "Demo Img",
        "height": 20,
        "id": "MISSING_ID",
        "src": "/images/logo.png",
        "style": Object {},
        "type": "img",
        "uid": "MISSING_ID_DEMOID",
        "width": 50,
      },
    ],
    Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Hello",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "World",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "This",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "altText": "Demo Img",
        "height": 20,
        "id": "MISSING_ID",
        "src": "/images/logo.png",
        "style": Object {},
        "type": "img",
        "uid": "MISSING_ID_DEMOID",
        "width": 50,
      },
    ],
  ],
  "font": "100 4mm/4.5mm  Arial",
  "headings": Array [
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "NAME",
      "type": "p",
      "uid": "DEMOID",
    },
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "PLACE",
      "type": "p",
      "uid": "DEMOID",
    },
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "INFO",
      "type": "p",
      "uid": "DEMOID",
    },
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "DESCRIPTION",
      "type": "p",
      "uid": "DEMOID",
    },
  ],
  "headingsHeight": 30,
  "headingsMargin": 3,
  "height": 83,
  "id": "Complex table",
  "rowHeights": Array [
    20,
    30,
  ],
  "type": "table",
  "uid": 96,
  "width": 140,
}
`;

exports[`DocComponents Snapshots should generate MOCK_TABLE_EXAMPLE 1`] = `
Object {
  "cellPadding": 0,
  "columnWidths": Array [
    20,
    30,
    30,
    60,
  ],
  "content": Array [
    Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Hello",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "World",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "This",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Is some information",
        "type": "p",
        "uid": "DEMOID",
      },
    ],
    Array [
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Another",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Place",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "This",
        "type": "p",
        "uid": "DEMOID",
      },
      Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": "MISSING_ID",
        "style": Object {},
        "text": "Is some information",
        "type": "p",
        "uid": "DEMOID",
      },
    ],
  ],
  "font": "100 4mm/4.5mm  Arial",
  "headings": Array [
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "NAME",
      "type": "p",
      "uid": "DEMOID",
    },
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "PLACE",
      "type": "p",
      "uid": "DEMOID",
    },
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "INFO",
      "type": "p",
      "uid": "DEMOID",
    },
    Object {
      "align": "left",
      "font": "100 4mm/4.5mm  Arial",
      "height": 4.5,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "DESCRIPTION",
      "type": "p",
      "uid": "DEMOID",
    },
  ],
  "headingsHeight": 4.56,
  "headingsMargin": 3,
  "height": 57.56,
  "id": "Demo Table",
  "rowHeights": Array [
    20,
    30,
  ],
  "type": "table",
  "uid": -99,
  "width": 140,
}
`;

exports[`DocComponents Snapshots should generate mock container 1`] = `
Object {
  "content": Object {
    "align": "left",
    "font": "100 4mm/4.5mm  Arial",
    "height": 4.5,
    "id": "MISSING_ID",
    "style": Object {},
    "text": "Hello World",
    "type": "p",
    "uid": "DEMOID",
  },
  "height": 100,
  "id": "MISSING_ID",
  "style": Object {},
  "type": "container",
  "uid": "DEMOID",
  "width": 20,
}
`;

exports[`DocComponents Snapshots should generate mock div 1`] = `
Object {
  "align": "left",
  "content": "Hello World",
  "font": "100 4mm/4.5mm  Arial",
  "height": 100,
  "id": "MISSING_ID",
  "style": Object {},
  "type": "div",
  "uid": "DEMOID",
  "width": 20,
}
`;

exports[`DocComponents Snapshots should generate mock hr 1`] = `
Object {
  "height": 30,
  "id": "MISSING_ID",
  "marginBottom": 20,
  "marginTop": 10,
  "style": Object {},
  "type": "hr",
  "uid": "DEMOID",
}
`;

exports[`DocComponents Snapshots should generate mock image 1`] = `
Object {
  "altText": "Demo Img",
  "height": 20,
  "id": "MISSING_ID",
  "src": "/images/logo.png",
  "style": Object {},
  "type": "img",
  "uid": "MISSING_ID_DEMOID",
  "width": 50,
}
`;

exports[`DocComponents Table Calculated should calculate heading height correctly 1`] = `
Object {
  "cellPadding": 2,
  "columnWidths": Array [
    95,
    95,
  ],
  "content": Array [
    Array [
      Object {
        "align": "left",
        "content": "Foo",
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
      Object {
        "align": "left",
        "content": "hello",
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
    ],
    Array [
      Object {
        "align": "left",
        "content": "Foo",
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
      Object {
        "align": "left",
        "content": "hello",
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
    ],
    Array [
      Object {
        "align": "left",
        "content": "Foo",
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
      Object {
        "align": "left",
        "content": "hello",
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
    ],
  ],
  "font": "100 4mm/4.5mm  Arial",
  "headings": Array [
    Object {
      "align": "left",
      "content": Array [
        Object {
          "align": "left",
          "font": "100 4mm/4.5mm  Arial",
          "height": 4.5,
          "id": undefined,
          "style": Object {},
          "text": "Value",
          "type": "b",
          "uid": "DEMOID",
        },
        Object {
          "align": "left",
          "font": "100 4mm/4.5mm  Arial",
          "height": 4.5,
          "id": "MISSING_ID",
          "style": Object {},
          "text": "(abc)",
          "type": "p",
          "uid": "DEMOID",
        },
      ],
      "font": "100 4mm/4.5mm  Arial",
      "height": "auto",
      "id": "MISSING_ID",
      "style": Object {},
      "type": "div",
      "uid": "DEMOID",
      "width": "auto",
    },
    Object {
      "align": "left",
      "content": Object {
        "align": "left",
        "font": "100 4mm/4.5mm  Arial",
        "height": 4.5,
        "id": undefined,
        "style": Object {},
        "text": "b",
        "type": "b",
        "uid": "DEMOID",
      },
      "font": "100 4mm/4.5mm  Arial",
      "height": "auto",
      "id": "MISSING_ID",
      "style": Object {},
      "type": "div",
      "uid": "DEMOID",
      "width": "auto",
    },
  ],
  "headingsHeight": 11,
  "headingsMargin": 3,
  "height": 33.5,
  "id": "productsTable",
  "rowHeights": Array [
    6.5,
    6.5,
    6.5,
  ],
  "type": "table",
  "uid": 1,
  "width": 190,
}
`;

exports[`DocComponents Table Calculated should calculate the width of a table correctly 1`] = `
Object {
  "cellPadding": 0,
  "columnWidths": Array [
    50,
    50,
  ],
  "content": Array [
    Array [
      Object {
        "align": "left",
        "content": "Foo",
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
      Object {
        "align": "left",
        "content": "hello",
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
    ],
    Array [
      Object {
        "align": "left",
        "content": "Foo",
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
      Object {
        "align": "left",
        "content": "hello",
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
    ],
    Array [
      Object {
        "align": "left",
        "content": "Foo",
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
      Object {
        "align": "left",
        "content": "hello",
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": "auto",
      },
    ],
  ],
  "font": "100 4mm/4.5mm  Arial",
  "headings": Array [
    Object {
      "align": "left",
      "font": "5mm/4.56mm Arial",
      "height": 4.56,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "a",
      "type": "h3",
      "uid": "DEMOID",
    },
    Object {
      "align": "left",
      "font": "5mm/4.56mm Arial",
      "height": 4.56,
      "id": "MISSING_ID",
      "style": Object {},
      "text": "b",
      "type": "h3",
      "uid": "DEMOID",
    },
  ],
  "headingsHeight": 4.56,
  "headingsMargin": 3,
  "height": 21.06,
  "id": 1,
  "rowHeights": Array [
    4.5,
    4.5,
    4.5,
  ],
  "type": "table",
  "uid": "table",
  "width": 100,
}
`;

exports[`DocComponents Table Headings should render headings labels 1`] = `
Array [
  Object {
    "cellPadding": 0,
    "columnWidths": Array [
      50,
      50,
    ],
    "content": Array [
      Array [
        Object {
          "align": "left",
          "content": "Foo",
          "font": "100 4mm/4.5mm  Arial",
          "height": 4.5,
          "id": "MISSING_ID",
          "style": Object {},
          "type": "div",
          "uid": "DEMOID",
          "width": "auto",
        },
        Object {
          "align": "left",
          "content": "hello",
          "font": "100 4mm/4.5mm  Arial",
          "height": 4.5,
          "id": "MISSING_ID",
          "style": Object {},
          "type": "div",
          "uid": "DEMOID",
          "width": "auto",
        },
      ],
      Array [
        Object {
          "align": "left",
          "content": "Foo",
          "font": "100 4mm/4.5mm  Arial",
          "height": 4.5,
          "id": "MISSING_ID",
          "style": Object {},
          "type": "div",
          "uid": "DEMOID",
          "width": "auto",
        },
        Object {
          "align": "left",
          "content": "hello",
          "font": "100 4mm/4.5mm  Arial",
          "height": 4.5,
          "id": "MISSING_ID",
          "style": Object {},
          "type": "div",
          "uid": "DEMOID",
          "width": "auto",
        },
      ],
      Array [
        Object {
          "align": "left",
          "content": "Foo",
          "font": "100 4mm/4.5mm  Arial",
          "height": 4.5,
          "id": "MISSING_ID",
          "style": Object {},
          "type": "div",
          "uid": "DEMOID",
          "width": "auto",
        },
        Object {
          "align": "left",
          "content": "hello",
          "font": "100 4mm/4.5mm  Arial",
          "height": 4.5,
          "id": "MISSING_ID",
          "style": Object {},
          "type": "div",
          "uid": "DEMOID",
          "width": "auto",
        },
      ],
    ],
    "font": "100 4mm/4.5mm  Arial",
    "headings": Array [
      Object {
        "align": "left",
        "content": Array [
          "a",
          "aa",
        ],
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": 3,
      },
      Object {
        "align": "left",
        "content": Array [
          Object {
            "align": "left",
            "font": "100 4mm/4.5mm  Arial",
            "height": 4.5,
            "id": "MISSING_ID",
            "style": Object {},
            "text": "b",
            "type": "p",
            "uid": "DEMOID",
          },
          "b",
          Object {
            "align": "left",
            "font": "100 4mm/4.5mm  Arial",
            "height": 4.5,
            "id": "MISSING_ID",
            "style": Object {},
            "text": "b",
            "type": "p",
            "uid": "DEMOID",
          },
        ],
        "font": "100 4mm/4.5mm  Arial",
        "height": "auto",
        "id": "MISSING_ID",
        "style": Object {},
        "type": "div",
        "uid": "DEMOID",
        "width": 3,
      },
    ],
    "headingsHeight": 13.5,
    "headingsMargin": 3,
    "height": 30,
    "id": 1,
    "rowHeights": Array [
      4.5,
      4.5,
      4.5,
    ],
    "type": "table",
    "uid": "table",
    "width": 100,
  },
]
`;
